--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "purescript-enums": "^0.7.0",
     "purescript-functions": "^0.1.0",
     "purescript-globals": "^0.2.0",
-    "purescript-generics": "~0.6.2"
+    "purescript-generics": "^0.7.0"
   }
 }
