--- a/bower.json
+++ b/bower.json
@@ -24,8 +24,9 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-enums": "^0.7.0",
-    "purescript-functions": "^0.1.0",
-    "purescript-globals": "^0.2.0"
+    "purescript-globals": "^1.0.0",
+    "purescript-eff": "^1.0.0",
+    "purescript-enums": "^1.0.0",
+    "purescript-functions": "^1.0.0"
   }
 }
