--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "devDependencies": {
     "eslint": "^3.17.1",
     "pulp": "^11.0.x",
-    "purescript": "0.11.x",
-    "purescript-psa": "^0.5.0",
+    "purescript": "^0.11.x",
+    "purescript-psa": "^0.5.x",
     "rimraf": "^2.6.1"
   }
 }
