--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "purescript-enums": "^3.1.0",
     "purescript-functions": "^3.0.0",
-    "purescript-generics": "^4.0.0",
+    "purescript-generics-rep": "^5.3.0",
     "purescript-integers": "^3.0.0",
     "purescript-foldable-traversable": "^3.0.0",
     "purescript-maps": "^3.0.0",
