--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,6 @@
   "devDependencies": {
     "purescript-assert": "master",
     "purescript-console": "master",
-    "purescript-strings": "master",
-    "purescript-proxy": "master"
+    "purescript-strings": "master"
   }
 }
